# feheim

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
scripts/: bump.sh
src/: api.rs  commands.rs  config.rs  error.rs  formula.rs  install.rs  main.rs  platform.rs  relocate.rs  state.rs  ui.rs
