[package]
name = "feheim"
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
description = "A Homebrew package manager core, rebuilt in Rust"
authors = ["Tyloo <jbonva@gmail.com>"]
license = "MIT"
repository = "https://github.com/tyloo/feheim"
homepage = "https://github.com/tyloo/feheim"
readme = "README.md"
keywords = ["homebrew", "package-manager", "bottle", "macos", "cli"]
categories = ["command-line-utilities"]
exclude = ["assets/", "docs/", ".github/"]

[[bin]]
name = "feheim"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
dirs = "5"
libc = "0.2"
indicatif = "0.17"
console = "0.15"

[profile.release]
opt-level = 2
